hs-bindgen/examples/golden/doxygen_docs.h

/**
 * @def MAX_NAME_LENGTH
 * @brief Maximum length for name strings
 *
 */
#define MAX_NAME_LENGTH 64
/** This is the comment @b title
 * @typedef size_type
 * @brief Size type for this library
 */
typedef size_t size_type;
/**
 * @var extern int global_counter
 * @brief Global counter variable
 * @details This variable tracks the number of operations performed.
 */
extern int global_counter;
/**
 * @var extern const char* version_string
 * @brief Version string constant
 */
extern const char* version_string;
/** This is the comment @c title
 * @brief Forward declaration with documentation
 */
struct forward_declared_struct;
/**
 * @brief Forward declaration of union
 */
union forward_declared_union;
/**
 * @enum color_enum
 * @brief Color enumeration without typedef
 */
enum color_enum {
    COLOR_RED,   /**< Red color */
    COLOR_GREEN, /**< Green color */
    COLOR_BLUE   /**< Blue color */
};
/**
 * @defgroup functions Function Definitions
 * @brief All function definitions
 * @{
 */

/**
 * @brief Function with detailed parameter documentation
 *
 * This function shows different parameter directions and types.
 *
 * @param[in] input_data Input data buffer
 * @param[out] output_data Output data buffer
 * @param[in,out] size Size of data, updated on return
 * @return Status code (0 = success, -1 = error)
 */
int process_data(const uint8_t* input_data, uint8_t* output_data, size_t* size);
/**
 * @brief Function with inline commands and formatting
 *
 * This function uses @c inline @c code formatting and @b bold text.
 * It also demonstrates @e emphasized text.
 *
 * @param filename The @c char* filename to process
 * @return @c true if successful, @c false otherwise
 */
bool process_file(const char* filename);
/**
 * @brief Function with verbatim code blocks
 *
 * Example usage:
 * @code
 * int result = calculate_value(10, 20);
 * printf("Result: %d@n", result);
 * @endcode
 *
 * @param base Base value
 * @param multiplier Multiplier value
 * @return Calculated result
 */
int calculate_value(int base, int multiplier);
/**
 * @brief Function with HTML formatting
 *
 * This function demonstrates <b>HTML bold</b> and <i>italic</i> text.
 * It also shows <code>HTML code</code> formatting.
 *
 * <table>
 * <tr><th>Input</th><th>Output</th></tr>
 * <tr><td>0</td><td>false</td></tr>
 * <tr><td>1</td><td>true</td></tr>
 * </table>
 *
 * @param value Input value
 * @return Boolean result
 */
bool html_example(int value);
/**
 * @brief Function with lists and special formatting
 *
 * This function demonstrates:
 * - Bullet point lists
 *   * Nested list item 1
 *   * Nested list item 2
 * - Multiple items
 * - Nested formatting
 *
 * Numbered list:
 * 1. First @c item 1. item
 * 2. Second @b item
 * 3. Third item
 *
 * Other numbered list:
 * -# A
 * -# B
 * -# C
 *
 * @param items Array of items
 * @param count Number of items
 * @return Success status
 */
bool list_example(const char** items, size_t count);
/**
 * @brief Function with warnings and notes
 *
 * @warning This function may cause side effects
 * @note Use with caution in multithreaded environments
 * @see related_function() for similar functionality
 *
 * @param ptr Pointer to data
 * @return Modified pointer
 */
void* dangerous_function(void* ptr);
/**
 * @brief Function with return value details
 *
 * @param input Input string
 * @retval 0 Success
 * @retval -1 Invalid input
 * @retval -2 Memory allocation failed
 * @retval -3 Processing error
 */
int detailed_return_codes(const char* input);
/**
 * @brief Function with deprecated annotation
 *
 * @deprecated Use new_function() instead
 * @param old_param Legacy parameter
 * @return Legacy result
 */
int old_function(int old_param);
/**
 * @brief Function with version information
 *
 * @since 1.0
 * @version 1.2
 * @param data Input data
 * @return Processed data
 */
int versioned_function(int data);
/**
 * @brief Callback function type
 *
 * @param event_type Type of event
 * @param user_data User-provided data
 * @return Handling result
 */
typedef int (*event_callback_t)(int event_type, void* user_data);
/**
 * @brief Structure with documented fields
 *
 * This structure demonstrates field documentation.
 */
typedef struct {
    /** @brief Unique identifier */
    uint32_t id;

    /** @brief Human-readable name */
    char name[64];

    /** @brief Configuration flags */
    uint32_t flags;

    /** @brief Optional callback function */
    event_callback_t callback;

    /** @brief User data for callback */
    void* user_data;
} /** Configuration struct */ config_t;