hs-bindgen/fixtures/doxygen_docs.rs

/* automatically generated by rust-bindgen 0.71.1 */

#[repr(C)]
#[derive(Copy, Clone, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd)]
pub struct __BindgenBitfieldUnit<Storage> {
    storage: Storage,
}
impl<Storage> __BindgenBitfieldUnit<Storage> {
    #[inline]
    pub const fn new(storage: Storage) -> Self {
        Self { storage }
    }
}
impl<Storage> __BindgenBitfieldUnit<Storage>
where
    Storage: AsRef<[u8]> + AsMut<[u8]>,
{
    #[inline]
    fn extract_bit(byte: u8, index: usize) -> bool {
        let bit_index = if cfg!(target_endian = "big") {
            7 - (index % 8)
        } else {
            index % 8
        };
        let mask = 1 << bit_index;
        byte & mask == mask
    }
    #[inline]
    pub fn get_bit(&self, index: usize) -> bool {
        debug_assert!(index / 8 < self.storage.as_ref().len());
        let byte_index = index / 8;
        let byte = self.storage.as_ref()[byte_index];
        Self::extract_bit(byte, index)
    }
    #[inline]
    pub unsafe fn raw_get_bit(this: *const Self, index: usize) -> bool {
        debug_assert!(index / 8 < core::mem::size_of::<Storage>());
        let byte_index = index / 8;
        let byte = *(core::ptr::addr_of!((*this).storage) as *const u8)
            .offset(byte_index as isize);
        Self::extract_bit(byte, index)
    }
    #[inline]
    fn change_bit(byte: u8, index: usize, val: bool) -> u8 {
        let bit_index = if cfg!(target_endian = "big") {
            7 - (index % 8)
        } else {
            index % 8
        };
        let mask = 1 << bit_index;
        if val { byte | mask } else { byte & !mask }
    }
    #[inline]
    pub fn set_bit(&mut self, index: usize, val: bool) {
        debug_assert!(index / 8 < self.storage.as_ref().len());
        let byte_index = index / 8;
        let byte = &mut self.storage.as_mut()[byte_index];
        *byte = Self::change_bit(*byte, index, val);
    }
    #[inline]
    pub unsafe fn raw_set_bit(this: *mut Self, index: usize, val: bool) {
        debug_assert!(index / 8 < core::mem::size_of::<Storage>());
        let byte_index = index / 8;
        let byte = (core::ptr::addr_of_mut!((*this).storage) as *mut u8)
            .offset(byte_index as isize);
        *byte = Self::change_bit(*byte, index, val);
    }
    #[inline]
    pub fn get(&self, bit_offset: usize, bit_width: u8) -> u64 {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < self.storage.as_ref().len());
        debug_assert!(
            (bit_offset + (bit_width as usize)) / 8 <= self.storage.as_ref().len(),
        );
        let mut val = 0;
        for i in 0..(bit_width as usize) {
            if self.get_bit(i + bit_offset) {
                let index = if cfg!(target_endian = "big") {
                    bit_width as usize - 1 - i
                } else {
                    i
                };
                val |= 1 << index;
            }
        }
        val
    }
    #[inline]
    pub unsafe fn raw_get(this: *const Self, bit_offset: usize, bit_width: u8) -> u64 {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < core::mem::size_of::<Storage>());
        debug_assert!(
            (bit_offset + (bit_width as usize)) / 8 <= core::mem::size_of::<Storage>(),
        );
        let mut val = 0;
        for i in 0..(bit_width as usize) {
            if Self::raw_get_bit(this, i + bit_offset) {
                let index = if cfg!(target_endian = "big") {
                    bit_width as usize - 1 - i
                } else {
                    i
                };
                val |= 1 << index;
            }
        }
        val
    }
    #[inline]
    pub fn set(&mut self, bit_offset: usize, bit_width: u8, val: u64) {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < self.storage.as_ref().len());
        debug_assert!(
            (bit_offset + (bit_width as usize)) / 8 <= self.storage.as_ref().len(),
        );
        for i in 0..(bit_width as usize) {
            let mask = 1 << i;
            let val_bit_is_set = val & mask == mask;
            let index = if cfg!(target_endian = "big") {
                bit_width as usize - 1 - i
            } else {
                i
            };
            self.set_bit(index + bit_offset, val_bit_is_set);
        }
    }
    #[inline]
    pub unsafe fn raw_set(this: *mut Self, bit_offset: usize, bit_width: u8, val: u64) {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < core::mem::size_of::<Storage>());
        debug_assert!(
            (bit_offset + (bit_width as usize)) / 8 <= core::mem::size_of::<Storage>(),
        );
        for i in 0..(bit_width as usize) {
            let mask = 1 << i;
            let val_bit_is_set = val & mask == mask;
            let index = if cfg!(target_endian = "big") {
                bit_width as usize - 1 - i
            } else {
                i
            };
            Self::raw_set_bit(this, index + bit_offset, val_bit_is_set);
        }
    }
}
#[repr(C)]
#[derive(Default)]
pub struct __IncompleteArrayField<T>(::std::marker::PhantomData<T>, [T; 0]);
impl<T> __IncompleteArrayField<T> {
    #[inline]
    pub const fn new() -> Self {
        __IncompleteArrayField(::std::marker::PhantomData, [])
    }
    #[inline]
    pub fn as_ptr(&self) -> *const T {
        self as *const _ as *const T
    }
    #[inline]
    pub fn as_mut_ptr(&mut self) -> *mut T {
        self as *mut _ as *mut T
    }
    #[inline]
    pub unsafe fn as_slice(&self, len: usize) -> &[T] {
        ::std::slice::from_raw_parts(self.as_ptr(), len)
    }
    #[inline]
    pub unsafe fn as_mut_slice(&mut self, len: usize) -> &mut [T] {
        ::std::slice::from_raw_parts_mut(self.as_mut_ptr(), len)
    }
}
impl<T> ::std::fmt::Debug for __IncompleteArrayField<T> {
    fn fmt(&self, fmt: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        fmt.write_str("__IncompleteArrayField")
    }
}
pub const MAX_NAME_LENGTH: u32 = 64;
/** This is the comment @b title
 @typedef size_type
 @brief Size type for this library*/
pub type size_type = usize;
unsafe extern "C" {
    /** @var extern int global_counter
 @brief Global counter variable
 @details This variable tracks the number of operations performed.*/
    pub static mut global_counter: ::std::os::raw::c_int;
}
unsafe extern "C" {
    /** @var extern const char* version_string
 @brief Version string constant*/
    pub static mut version_string: *const ::std::os::raw::c_char;
}
/** This is the comment @c title
 @brief Forward declaration with documentation*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct forward_declared_struct {
    _unused: [u8; 0],
}
/// @brief Forward declaration of union
#[repr(C)]
#[derive(Copy, Clone)]
pub struct forward_declared_union {
    _unused: [u8; 0],
}
///< Red color
pub const color_enum_COLOR_RED: color_enum = 0;
///< Green color
pub const color_enum_COLOR_GREEN: color_enum = 1;
///< Blue color
pub const color_enum_COLOR_BLUE: color_enum = 2;
/** @enum color_enum
 @brief Color enumeration without typedef*/
pub type color_enum = ::std::os::raw::c_uint;
unsafe extern "C" {
    /** @brief Function with detailed parameter documentation

 This function shows different parameter directions and types.

 @param[in] input_data Input data buffer
 @param[out] output_data Output data buffer
 @param[in,out] size Size of data, updated on return
 @return Status code (0 = success, -1 = error)*/
    pub fn process_data(
        input_data: *const u8,
        output_data: *mut u8,
        size: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    /** @brief Function with inline commands and formatting

 This function uses @c inline @c code formatting and @b bold text.
 It also demonstrates @e emphasized text.

 @param filename The @c char* filename to process
 @return @c true if successful, @c false otherwise*/
    pub fn process_file(filename: *const ::std::os::raw::c_char) -> bool;
}
unsafe extern "C" {
    /** @brief Function with verbatim code blocks

 Example usage:
 @code
 int result = calculate_value(10, 20);
 printf("Result: %d@n", result);
 @endcode

 @param base Base value
 @param multiplier Multiplier value
 @return Calculated result*/
    pub fn calculate_value(
        base: ::std::os::raw::c_int,
        multiplier: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    /** @brief Function with HTML formatting

 This function demonstrates <b>HTML bold</b> and <i>italic</i> text.
 It also shows <code>HTML code</code> formatting.

 <table>
 <tr><th>Input</th><th>Output</th></tr>
 <tr><td>0</td><td>false</td></tr>
 <tr><td>1</td><td>true</td></tr>
 </table>

 @param value Input value
 @return Boolean result*/
    pub fn html_example(value: ::std::os::raw::c_int) -> bool;
}
unsafe extern "C" {
    /** @brief Function with lists and special formatting

 This function demonstrates:
 - Bullet point lists
   * Nested list item 1
   * Nested list item 2
 - Multiple items
 - Nested formatting

 Numbered list:
 1. First @c item 1. item
 2. Second @b item
 3. Third item

 Other numbered list:
 -# A
 -# B
 -# C

 @param items Array of items
 @param count Number of items
 @return Success status*/
    pub fn list_example(items: *mut *const ::std::os::raw::c_char, count: usize) -> bool;
}
unsafe extern "C" {
    /** @brief Function with warnings and notes

 @warning This function may cause side effects
 @note Use with caution in multithreaded environments
 @see related_function() for similar functionality

 @param ptr Pointer to data
 @return Modified pointer*/
    pub fn dangerous_function(
        ptr: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    /** @brief Function with return value details

 @param input Input string
 @retval 0 Success
 @retval -1 Invalid input
 @retval -2 Memory allocation failed
 @retval -3 Processing error*/
    pub fn detailed_return_codes(
        input: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    /** @brief Function with deprecated annotation

 @deprecated Use new_function() instead
 @param old_param Legacy parameter
 @return Legacy result*/
    pub fn old_function(old_param: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    /** @brief Function with version information

 @since 1.0
 @version 1.2
 @param data Input data
 @return Processed data*/
    pub fn versioned_function(data: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
/** @brief Callback function type

 @param event_type Type of event
 @param user_data User-provided data
 @return Handling result*/
pub type event_callback_t = ::std::option::Option<
    unsafe extern "C" fn(
        event_type: ::std::os::raw::c_int,
        user_data: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int,
>;
/** @brief Structure with documented fields

 This structure demonstrates field documentation.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct config_t {
    /// @brief Unique identifier
    pub id: u32,
    /// @brief Human-readable name
    pub name: [::std::os::raw::c_char; 64usize],
    /// @brief Configuration flags
    pub flags: u32,
    /** @brief Optional callback function

 See also: \ref event_callback_t
*/
    pub callback: event_callback_t,
    /// @brief User data for callback
    pub user_data: *mut ::std::os::raw::c_void,
}
